# chess_engine_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  package-lock.json  python_example.py  requirements.txt  server.py  vcpkg.json
include/chess_cpp/: chess_ai.hpp  chess_cpp.hpp  chess_rules.hpp  nnue_evaluator.hpp  python_api.hpp  threefold_repetition.hpp
model/: trained_nnue.onnx  trained_nnue.pt  trained_nnue_best.pt
model/old/: nnue_model.onnx  trained_nnue.pt
python/: README.md  ai_example.py  chess.py  python_example.py  self_play.py
python/chess/: __init__.py  chess.py
python/chess_dir/: __init__.py  ai_chess.py  chess.py
react-chess-frontend/: README.md  package-lock.json  package.json  vite.config.js
react-chess-frontend/src/: App.css  App.jsx  Board.jsx  CoverPage.css  CoverPage.jsx  GameModeSelector.jsx  Piece.jsx  index.css
src/: CMakeLists.txt  ChessMain.py  annotate_pgn.py  chess_ai.cpp  chess_cpp.cpp  chess_cpp_main.cpp  chess_engine_cython.cpp  chess_engine_cython.html  chess_engine_cython.pyx  chess_rules.cpp  cython_feature_extractor.c  cython_feature_extractor.pyx  hd5f_converter.py  manual_export.py  nnue_evaluator.cpp  python_api.cpp  setup_cython.py  threefold_repetition.cpp  train_nnue_cython.py
tests/: CMakeLists.txt  chess_cpp_test.cpp
